--- a/src/customBootstrap.scss
+++ b/src/customBootstrap.scss
@@ -37,5 +37,7 @@ $position-values: (
 $progress-height: 5px;
 $progress-bar-bg: #4defe5;
 
+$input-border-color: #ae9e9e;
+$form-check-input-border: 1px solid #ae9e9e;
 // Import Bootstrap and its default variables
 @import '../node_modules/bootstrap/scss/bootstrap';
