logo, fix linh tinh

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,7 +2,7 @@
 @import './variable';
 :root {
     --primary: #363658;
-    --text-color: #ced8e1;
+    --text-color: #fff;
     --linear-color: linear-gradient(270deg, #4dffdf 0%, #4da1ff 96.35%);
 }
 
