--- a/src/customBootstrap.scss
+++ b/src/customBootstrap.scss
@@ -35,7 +35,7 @@ $position-values: (
 );
 
 $progress-height: 5px;
-$progress-bar-bg: #4defe5;
+$progress-bar-bg: #e35d09;
 
 $input-border-color: #ae9e9e;
 $form-check-input-border: 1px solid #ae9e9e;
