Đổi lại giao diện home

--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -24,7 +24,7 @@
     padding: 1rem;
     position: absolute;
     left: 110%;
-    bottom: -100%;
+    top: 000%;
     border-radius: 10px;
 
     min-height: 22rem;
