--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,6 +2,7 @@
 @import './variable';
 :root {
     --primary: #363658;
+    // --primary: #acc8bb;
     --text-color: #fff;
     --linear-color: linear-gradient(270deg, #4dffdf 0%, #4da1ff 96.35%);
 }
