--- a/src/components/NavbarItem/navitem.scss
+++ b/src/components/NavbarItem/navitem.scss
@@ -1,5 +1,5 @@
 .nav_active {
-    background-color: #62628d !important;
+    background-color: #d8bfd8 !important;
     .nav-icons {
         right: 10% !important;
     }
