--- a/src/customBootstrap.scss
+++ b/src/customBootstrap.scss
@@ -35,7 +35,9 @@ $position-values: (
 );
 
 $progress-height: 5px;
-$progress-bar-bg: #e35d09;
+$progress-bg: #d8bfd8;
+$progress-bar-bg: #c71585;
+$progress-bar-transition: none;
 
 $input-border-color: #ae9e9e;
 $form-check-input-border: 1px solid #ae9e9e;
