--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -24,6 +24,6 @@
 // Thanh todostask, processing, done
 .home_content_header {
     color: var(--text-color);
-    background-color: #4e4e5e;
+    background-color: var(--background-status-bar);
     height: 3rem;
 }
