Chia sẻ công việc

--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -24,7 +24,7 @@
 .filter_dropdown {
     padding: 1rem;
     left: 110%;
-    top: 000%;
+    top: 0;
     border-radius: 10px;
 
     min-height: 23rem;
