update giao diện đky, đnhap

--- a/src/pages/SignIn/signin.scss
+++ b/src/pages/SignIn/signin.scss
@@ -1,5 +1,6 @@
 .signin_button {
-    background: var(--linear-color) !important;
+    background: #da70d6 !important;
+    color: white;
     width: 75%;
     height: 50px;
     padding-left: 5rem;
