--- a/src/customBootstrap.scss
+++ b/src/customBootstrap.scss
@@ -25,6 +25,7 @@ $position-values: (
     3: 3%,
     4: 4%,
     5: 5%,
+    7: 7%,
     10: 10%,
     15: 15%,
     20: 20%,
@@ -33,6 +34,7 @@ $position-values: (
     85: 85%,
     90: 90%,
     100: 100%,
+    200: 200%,
 );
 
 $progress-height: 5px;
